# AuraNexus

./: LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  metadata.json  package-lock.json  package.json  settings.gradle.kts
.github/workflows/: build-apk.yml
android-app/: build.gradle.kts  proguard-rules.pro
android-app/src/main/: AndroidManifest.xml
android-app/src/main/cpp/: CMakeLists.txt  aura-jni.cpp
android-app/src/main/java/com/auranexus/core/: AuraNative.kt  MainActivity.kt  TrainingMetrics.kt
android-app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
rust-core/: Cargo.toml
rust-core/src/: lib.rs
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AndroidPacingTab.tsx  AndroidUiExportTab.tsx  HardwareAccelerationTab.tsx  Header.tsx  JniNdkCiTab.tsx  MathGuideTab.tsx  MemoryCacheTab.tsx  MemorySafetyBenchmarkingTab.tsx  NetworkStreamTab.tsx  RustCodeTab.tsx  StabilityPrecisionTab.tsx  VisualizerTab.tsx
src/hooks/: useThermalMonitor.ts  useTrainingLoop.ts  useVisualizationData.ts
src/store/: AuraContext.tsx
src/utils/: generators.ts
